домашка номер2 с исправлениями